--- a/estilo/style.css
+++ b/estilo/style.css
@@ -21,7 +21,7 @@
     padding: 0px;
 }
 html,body {
-    background-color: darkgray;
+    background-color: var(--cor2);
     min-height: 100vh;
     font-family: var(--fonte2);
 }
@@ -31,12 +31,16 @@ header {
     padding-top: 50px;
     text-align: center;
     color: black;
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.357);
 }
 
 header > h1 {
     font-family: var(--fonte2);
     padding-bottom: 10px;
     font-variant: small-caps;
+    font-weight: bold;
+    font-size: 3em;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.186);
 }
 header >p {
     padding-bottom: 50px;
@@ -58,8 +62,8 @@ section {
     line-height: 2em;
     padding-left: 30px;
     font-family: var(--fonte1);
-    font-size: 20px;
-    max-width: 800px;
+    font-size:20px;
+    max-width: 1000px;
     min-width: 280px;
     margin: auto;
 }
@@ -72,6 +76,7 @@ section.imagem {
     color: var(--cor1);
     background-size: cover;
     background-attachment: fixed;
+    box-shadow: inset 1px 4px 13px rgba(0, 0, 0, 0.501);
     
 }
 
@@ -79,7 +84,7 @@ section.imagem >p {
     background-color: rgba(0, 0, 0, 0.207);
     display: inline-block;
     padding: 10px;
-    text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.501);
+    text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.357);
 }
 
 section >p {
